ensure Windows icon does not get clipped for install confirmation (bug 870123)

--- a/hearth/media/css/purchase.styl
+++ b/hearth/media/css/purchase.styl
@@ -36,11 +36,12 @@
         display: none;
         &.mac b {
             background: url(../img/icons/mac-applications.jpg) 5px 0 no-repeat;
+            background-size: contain;
             padding: 0 5px 0 38px;
         }
         &.windows b:last-child {
             background: url(../img/icons/win-start.png) 5px 0 no-repeat;
-            background-size: auto 18px;
+            background-size: contain;
             padding-left: 32px;
         }
     }
